Added Camera Following Mechanic (Code Script in Camera Object Not In Player) and added some shapes for testing (Will Be Remove)

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="Assets\Codes\CameraToCursor.cs" />
     <Compile Include="Assets\Codes\Movement.cs" />
+    <Compile Include="Assets\Codes\CameraFollowPlayer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
