made camera to follow the cursor and some updates at camera system

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,5 +57,5 @@
         "Temp/": true
     },
     "2d-topdown-horrorgame.sln=======dotnet.defaultSolution": "Unity-Game-Project.sln>>>>>>>676816e309eaf0b37b034fa7d3b6c895b819d2ed",
-    "dotnet.defaultSolution": "Unity-Game-Project.sln"
+    "dotnet.defaultSolution": "2d-topdown-horrorgame.sln"
 }
