--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,15 +59,17 @@
     <UnityVersion>2022.3.20f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Analyzer Include="C:\Users\Turan\.vscode\extensions\visualstudiotoolsforunity.vstuc-0.9.4\Analyzers\Microsoft.Unity.Analyzers.dll" />
+    <Analyzer Include="C:\Users\Selim\.vscode\extensions\visualstudiotoolsforunity.vstuc-0.9.4\Analyzers\Microsoft.Unity.Analyzers.dll" />
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.20f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.SourceGenerators.dll" />
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.20f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Codes\Crosshaircontrol.cs" />
+    <Compile Include="Assets\Codes\Bullet\Shooting.cs" />
     <Compile Include="Assets\Codes\CameraToCursor.cs" />
     <Compile Include="Assets\Codes\Movement.cs" />
     <Compile Include="Assets\Codes\CameraFollowPlayer.cs" />
+    <Compile Include="Assets\Codes\Bullet\BulletScript.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
