Added camera shaking mechanig (with a bug / camera shake doesnt follow players movement or camera target point, it statys constant)

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="Assets\Codes\Crosshaircontrol.cs" />
     <Compile Include="Assets\Codes\Bullet\Shooting.cs" />
+    <Compile Include="Assets\Codes\Camera\CameraShake.cs" />
     <Compile Include="Assets\Codes\CameraToCursor.cs" />
     <Compile Include="Assets\Codes\Movement.cs" />
     <Compile Include="Assets\Codes\CameraFollowPlayer.cs" />
