added interaction system

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,7 +59,7 @@
     <UnityVersion>2022.3.20f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Analyzer Include="C:\Users\Selim\.vscode\extensions\visualstudiotoolsforunity.vstuc-0.9.4\Analyzers\Microsoft.Unity.Analyzers.dll" />
+    <Analyzer Include="C:\Users\Turan\.vscode\extensions\visualstudiotoolsforunity.vstuc-0.9.4\Analyzers\Microsoft.Unity.Analyzers.dll" />
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.20f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.SourceGenerators.dll" />
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.20f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
@@ -68,9 +68,11 @@
     <Compile Include="Assets\Codes\Bullet\Shooting.cs" />
     <Compile Include="Assets\Codes\Camera\CameraShake.cs" />
     <Compile Include="Assets\Codes\Camera\CameraToCursor.cs" />
+    <Compile Include="Assets\Codes\Interaction\CollidableObject.cs" />
     <Compile Include="Assets\Codes\Movement\Movement.cs" />
     <Compile Include="Assets\Codes\Crosshair\Crosshaircontrol.cs" />
     <Compile Include="Assets\Codes\Bullet\BulletScript.cs" />
+    <Compile Include="Assets\Codes\Interaction\InteractableObject.cs" />
     <Compile Include="Assets\Codes\Bullet\AmmoTextCanvas.cs" />
   </ItemGroup>
   <ItemGroup>
